--- a/package.json
+++ b/package.json
@@ -8,26 +8,30 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "prebuild": "echo 'test",
-    "postbuild": "echo 'suite'"
+    "postbuild": "echo 'suite'",
+    "dev:ssr": "ng run AngDraw:serve-ssr",
+    "serve:ssr": "node dist/AngDraw/server/main.js",
+    "build:ssr": "ng build && ng run AngDraw:server",
+    "prerender": "ng run AngDraw:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/cdk": "^13.2.3",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/forms": "~13.2.0",
-    "@angular/material": "^13.2.3",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
+    "@angular/common": "~13.2.3",
+    "@angular/compiler": "~13.2.3",
+    "@angular/core": "~13.2.3",
+    "@angular/forms": "~13.2.3",
+    "@angular/platform-browser": "~13.2.3",
+    "@angular/platform-browser-dynamic": "~13.2.3",
+    "@angular/platform-server": "^13.2.4",
+    "@angular/router": "~13.2.3",
     "@ngrx/effects": "^13.0.2",
     "@ngrx/entity": "^13.0.2",
     "@ngrx/store": "^13.0.2",
     "@ngrx/store-devtools": "^13.0.2",
+    "@nguniversal/express-engine": "^13.0.2",
     "@types/fabric": "^4.5.7",
     "@types/uuid": "^8.3.4",
+    "express": "^4.15.2",
     "fabric": "^5.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -37,7 +41,9 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.4",
     "@angular/cli": "~13.2.4",
-    "@angular/compiler-cli": "~13.2.0",
+    "@angular/compiler-cli": "~13.2.3",
+    "@nguniversal/builders": "^13.0.2",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
